--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "prismjs": "^1.6.0",
     "vue": "^2.2.2"
   },
   "devDependencies": {
